优化下代码